[gd_scene load_steps=16 format=3 uid="uid://si04mud574jh"]

[ext_resource type="Texture2D" uid="uid://8bgcsu1xfo4u" path="res://graphics/up.png" id="1_d0ejv"]
[ext_resource type="Script" path="res://scripts/compound_button.gd" id="1_vf0ds"]
[ext_resource type="FontFile" uid="uid://wnb2movo6eli" path="res://fonts/m6x11 Daniel Linssen.ttf" id="2_ljrbw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mwde"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ul1lx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c6bgc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lryti"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qcstp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wjqq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_utmsp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r2few"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k30sm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hacfc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvoa2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bojee"]

[node name="CompoundButton" type="PanelContainer"]
texture_filter = 1
custom_minimum_size = Vector2(16, 16)
theme_override_styles/panel = SubResource("StyleBoxFlat_4mwde")
script = ExtResource("1_vf0ds")

[node name="ButtonImage" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("1_d0ejv")

[node name="Button" type="Button" parent="ButtonImage"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
offset_right = 16.0
offset_bottom = 16.0
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_ljrbw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ul1lx")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_c6bgc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lryti")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_qcstp")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6wjqq")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_utmsp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r2few")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_k30sm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hacfc")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_dvoa2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bojee")

[connection signal="mouse_entered" from="ButtonImage" to="." method="_on_button_image_mouse_entered"]
[connection signal="mouse_exited" from="ButtonImage" to="." method="_on_button_image_mouse_exited"]
[connection signal="pressed" from="ButtonImage/Button" to="." method="_on_button_pressed"]
